Added CIP13 parameter to allow search by presentation
