# api/medicaments/medicaments.controller.js
@@ -13,13 +13,23 @@ class MedicamentsController {
       .catch(next)
   }
 
-  getByName(req, res, next) {
-    this.medicamentsService.getByName(req.query.nom)
-      .then((result) => {
-        return res.json(result)
-      })
-      .catch(next)
+  getByQuery(req, res, next) {
+	if (req.query.nom) {
+		this.medicamentsService.getByName(req.query.nom)
+		  .then((result) => {
+			return res.json(result)
+		  })
+		  .catch(next)
+    }
+	else if (req.query.CIP13)  {
+		this.medicamentsService.getByCIP13(req.query.CIP13)
+		  .then((result) => {
+			return res.json(result)
+		  })
+		  .catch(next)
+	}
   }
+
 }
 
 module.exports = MedicamentsController;
